# security-solution-finder

./: LICENSE  README.md
security-solution-finder/: CMakeLists.txt  security-solution-finder.cpp
security-solution-finder/criteria/: CMakeLists.txt
security-solution-finder/criteria/find-apicalls/: apicallrecord.cpp  apicallrecord.h  findapicalls.cpp  findapicalls.h  findapivisitor.cpp  findapivisitor.h
security-solution-finder/criteria/find-keywords/: findkeywords.cpp  findkeywords.h  findkeywordsconsumer.cpp  findkeywordsconsumer.h  findkeywordsvisitor.cpp  findkeywordsvisitor.h  foundkeywordrecord.cpp  foundkeywordrecord.h
security-solution-finder/main-analysis/: consumerfactory.cpp  consumerfactory.h  includecapturer.cpp  includecapturer.h  mainanalysis.cpp  mainanalysis.h  mainanalysisaction.cpp  mainanalysisaction.h  mainconsumer.cpp  mainconsumer.h  mainvisitor.cpp  mainvisitor.h  recursivevisitor.h  sources.cpp  sources.h  visitorfactory.cpp  visitorfactory.h
security-solution-finder/security-patterns/: encryptedstorageanalysis.cpp  encryptedstorageanalysis.h  patternanalysis.h  sandboxanalysis.cpp  sandboxanalysis.h
